--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 aiogram==2.25.1
-asyncpg==0.28.0
-python-dotenv==1.0.0
+asyncpg==0.29.0
+python-dotenv==1.0.1
+aiohttp==3.9.3
+yarl==1.9.4
+multidict==6.0.4
+frozenlist==1.4.1
